--- a/guides/Esens_BIS54x/BIS54x.adoc
+++ b/guides/Esens_BIS54x/BIS54x.adoc
@@ -3,9 +3,9 @@
 :toc: left
 :toclevels: 4
 :source-highlighter: coderay
-:sourcedir: /Users/Siw/Documents/EHF/Pre-award/Dokumentasjon/BIS_54x
+:sourcedir: ../Esens_BIS54x
 :gendoc: ../General
-:imagesdir: /Users/Siw/Documents/EHF/Pre-award/Dokumentasjon/General/assets
+:imagesdir: ../General/assets
 
 Direktoratet for forvaltning og IKT, DIFI; Siw Midtgård Meckelborg
 v0.1: First draft for review
