--- a/guides/esens_bis54/BIS54.adoc
+++ b/guides/esens_bis54/BIS54.adoc
@@ -2,6 +2,7 @@
 :icons: font
 :toc: left
 :toclevels: 4
+:source-highlighter: coderay
 :sourcedir: .
 :gendoc: ../General
 :imagesdir: ../General/assets
