--- a/guides/esens_bis54x/introduction/README.adoc
+++ b/guides/esens_bis54x/introduction/README.adoc
@@ -12,4 +12,4 @@ This BIS provides a set of specifications for implementing a business process. T
 
 test
 
-image::../General/assets/purpose.png[Purpose, align="center"]
+image::purpose.png[Purpose, align="center"]
