--- a/guides/esens_bis54x/process/business_process.adoc
+++ b/guides/esens_bis54x/process/business_process.adoc
@@ -4,4 +4,4 @@
 
 The following {BPMN} diagram shows the choreography of the business process implemented by the profile. The choreography of business collaborations defines the sequence of interactions when the profile is run within its context.
 
-image::{imagesdir}\BPMN_54x.png[BPMN, align="center"]
+image::BPMN_54x.png[BPMN, align="center"]
