--- a/guides/esens_bis54/introduction/README.adoc
+++ b/guides/esens_bis54/introduction/README.adoc
@@ -9,4 +9,6 @@ This BIS provides a set of specifications for implementing a business process. T
 
 *The purpose* of this document is to describe a common format for exchanging messages in a procurement procedure, to facilitate an efficient implementation and increased use of electronic tendering based on this format.
 
-image::../General/assets/purpose.png[Purpose, align="center"]
+#test#
+
+image::vefa-preaward/guides/General/assets/purpose.png[Purpose, align="center"]
