--- a/guides/esens_bis54/BIS54.adoc
+++ b/guides/esens_bis54/BIS54.adoc
@@ -5,6 +5,7 @@
 :source-highlighter: coderay
 :sourcedir: .
 :gendoc: ../General
+:imagesdir: ../General/assets
 
 
 Direktoratet for forvaltning og IKT, DIFI; Siw Midtgård Meckelborg
