Fetching rules from schematron files

--- a/guides/General/Trdm090_rules.adoc
+++ b/guides/General/Trdm090_rules.adoc
@@ -1,46 +1,3 @@
-
-
-.Rules for Tender (trdm090) :
-[cols="3", options="header"]
-|===
-|Rule ID
-|Rule text
-|Xpath
-
-| ESENS-T90-R001
-| A tender MUST not contain empty elements.
-|
-
-| ESENS-T90-R002
-| UBL version must be 2.1
-|cbc:UBLVersionID
-
-| ESENS-T90-R003
-| A tender MUST have a syntax identifier.
-|cbc:UBLVersionID
-
-| ESENS-T90-R004
-| SchemeID for endpoint identifier must be from PEPPOL Policy for identifiers, policy 8
-| //cbc:EndpointID//@schemeID
-
-|ESENS-T90-R005
-| An endpoint identifier MUST have a schemeID attribute
-|//cbc:EndpointID
-
-| ESENS-T90-R006
-| SchemeID for party identifier must be from PEPPOL Policy for identifiers, policy 8
-|//cac:PartyIdentification/cbc:ID/@schemeID
-
-|ESENS-T90-R007
-| A party identifier MUST have a schemeID attribute
-|//cac:PartyIdentification/cbc:ID
-
-| ESENS-T90-R008
-| Language codes must be from ISO 639-1
-| //cac:DocumentReference/cbc:LocaleCode
-
-| ESENS-T90-R009
-| List identfier for language codes must be ISO639-1, if used.
-| //cac:DocumentReference/cbc:LocaleCode/@listID
-
-|===
+|/ubl:Tender|not(count(//*[not(node()[not(self::comment())])]) > 0)|A tender MUST not contain empty elements. |/ubl:Tender|(cbc:UBLVersionID)|A tender MUST have a syntax identifier. |cbc:UBLVersionID|( ( not(contains(normalize-space(.),' ')) and contains( ' 2.1 ',concat(' ',normalize-space(.),' ') ) ) )|UBL version must be 2.1 |//cac:PartyIdentification/cbc:ID|(@schemeID)|A party identifier MUST have a schemeID attribute |//cac:PartyIdentification//schemeID|( ( not(contains(normalize-space(.),' ')) and contains( ' FR:SIRENE SE:ORGNR FR:SIRET FI:OVT DUNS GLN DK:P IT:FTI NL:KVK IT:SIA IT:SECETI DK:CPR DK:CVR DK:SE DK:VANS IT:VAT IT:CF NO:ORGNR NO:VAT HU:VAT EU:REID AT:VAT AT:GOV IS:KT IBAN AT:KUR ES:VAT IT:IPA AD:VAT AL:VAT BA:VAT BE:VAT BG:VAT CH:VAT CY:VAT CZ:VAT DE:VAT EE:VAT GB:VAT GR:VAT HR:VAT IE:VAT LI:VAT LT:VAT LU:VAT LV:VAT MC:VAT ME:VAT MK:VAT MT:VAT NL:VAT PL:VAT PT:VAT RO:VAT RS:VAT SI:VAT SK:VAT SM:VAT TR:VAT VA:VAT NL:ION SE:VAT ZZZ ',concat(' ',normalize-space(.),' ') ) ) )|SchemeID for party identifier must be from PEPPOL Policy for identifiers,
+                policy 8  |//cbc:EndpointID|(@schemeID)|An endpoint identifier MUST have a schemeID attribute |//cbc:EndpointID//@schemeID|( ( not(contains(normalize-space(.),' ')) and contains( ' FR:SIRENE SE:ORGNR FR:SIRET FI:OVT DUNS GLN DK:P IT:FTI NL:KVK IT:SIA IT:SECETI DK:CPR DK:CVR DK:SE DK:VANS IT:VAT IT:CF NO:ORGNR NO:VAT HU:VAT EU:REID AT:VAT AT:GOV IS:KT IBAN AT:KUR ES:VAT IT:IPA AD:VAT AL:VAT BA:VAT BE:VAT BG:VAT CH:VAT CY:VAT CZ:VAT DE:VAT EE:VAT GB:VAT GR:VAT HR:VAT IE:VAT LI:VAT LT:VAT LU:VAT LV:VAT MC:VAT ME:VAT MK:VAT MT:VAT NL:VAT PL:VAT PT:VAT RO:VAT RS:VAT SI:VAT SK:VAT SM:VAT TR:VAT VA:VAT NL:ION SE:VAT ZZZ ',concat(' ',normalize-space(.),' ') ) ) )|SchemeID for endpoint identifier must be from PEPPOL Policy for identifiers,
+                policy 8 
