--- a/guides/General/Trdm068_rules.adoc
+++ b/guides/General/Trdm068_rules.adoc
@@ -1,102 +1,3 @@
-
-
-.Rules for Tender (trdm090) :
-[cols="3", options="header"]
-|===
-|Rule ID
-|Rule text
-|Xpath
-
-| ESENS-T68-R001
-| A pre award catalogue MUST not contain empty elements.
-|
-
-| ESENS-T68-R002
-| UBL version must be 2.1
-|cbc:UBLVersionID
-
-| ESENS-T68-R003
-| A pre award catalogue MUST have a syntax identifier.
-|cbc:UBLVersionID
-
-| ESENS-T68-R004
-| SchemeID for endpoint identifier must be from PEPPOL Policy for identifiers, policy 8
-| //cbc:EndpointID//@schemeID
-
-|ESENS-T68-R005
-| An endpoint identifier MUST have a schemeID attribute
-|//cbc:EndpointID
-
-| ESENS-T68-R006
-| SchemeID for party identifier must be from PEPPOL Policy for identifiers, policy 8
-|//cac:PartyIdentification/cbc:ID/@schemeID
-
-|ESENS-T68-R007
-| A party identifier MUST have a schemeID attribute
-|//cac:PartyIdentification/cbc:ID
-
-| ESENS-T68-R008
-| If Party identification is used, identifier MUST be sent
-| //cac:PartyIdentification
-
-| ESENS-T68-R009
-| If Party Name is used, name MUST be sent
-| //cac:PartyName
-
-| ESENS-T68-R010
-| If Price is used, item net price MUST be sent
-| //cac:Price
-
-| ESENS-T68-R011
-| If AllowanceCharge is used, charge indicator, reason and amount MUST all be sent
-| //cac:Allowancecharge
-
-| ESENS-T68-R012
-| If Sellers Item Identification is used, item sellers identifier MUST be sent
-| //cac:SellersItemIdentification
-
-| ESENS-T68-R013
-| If Manufacturers Item Identification is used, manufacturer item identifier MUST be sent
-| //cac:ManufacturersItemIdentification
-
-| ESENS-T68-R014
-| If Standard Item Identification is used, item starndard identifier MUST be sent
-| //cac:StandardItemIdentification
-
-| ESENS-T68-R015
-| If Origin country is used, item origin country code MUST be sent
-| //cac:OriginCountry
-
-| ESENS-T68-R016
-| If Certificate is used, item label type and item label name MUST be sent
-| //cac:Certificate
-
-| ESENS-T68-R017
-| If Certificate is used, item label issuer party name MUST be sent
-| //cac:Certificate
-
-| ESENS-T68-R018
-| If Call for Tenders Line Reference is used, requested deliverable identifier MUST be sent
-| //cac:CallForTendersLineReference
-
-| ESENS-T68-R019
-| Minimum order quantity MUST have a unitCode
-| //cac:MinimumOrderQuantity
-
-| ESENS-T68-R020
-| Maximum order quantity MUST have a unitCode
-| //cac:MaximumOrderQuantity
-
-| ESENS-T68-R021
-| A pre-award catalogue line MUST have an orderable indicator
-| //cac:CatalogueLine
-
-| ESENS-T68-R022
-| If orderable indicator is true, orderable unit must be present
-| //cac:CatalogueLine
-
-| ESENS-T68-R023
-| The Minimum order quantity MUST be smaller than or equal to the Maximum order quantity.
-| //cac:CatalogueLine
-
-|===
+|/ubl:Tender|not(count(//*[not(node()[not(self::comment())])]) > 0)|A pre award catalogue MUST not contain empty elements. |/ubl:Tender|(cbc:UBLVersionID)|A tender MUST have a syntax identifier. |cbc:UBLVersionID|( ( not(contains(normalize-space(.),' ')) and contains( ' 2.1 ',concat(' ',normalize-space(.),' ') ) ) )|UBL version must be 2.1 |//cac:PartyIdentification/cbc:ID|(@schemeID)|A party identifier MUST have a schemeID attribute |//cac:PartyIdentification//schemeID|( ( not(contains(normalize-space(.),' ')) and contains( ' FR:SIRENE SE:ORGNR FR:SIRET FI:OVT DUNS GLN DK:P IT:FTI NL:KVK IT:SIA IT:SECETI DK:CPR DK:CVR DK:SE DK:VANS IT:VAT IT:CF NO:ORGNR NO:VAT HU:VAT EU:REID AT:VAT AT:GOV IS:KT IBAN AT:KUR ES:VAT IT:IPA AD:VAT AL:VAT BA:VAT BE:VAT BG:VAT CH:VAT CY:VAT CZ:VAT DE:VAT EE:VAT GB:VAT GR:VAT HR:VAT IE:VAT LI:VAT LT:VAT LU:VAT LV:VAT MC:VAT ME:VAT MK:VAT MT:VAT NL:VAT PL:VAT PT:VAT RO:VAT RS:VAT SI:VAT SK:VAT SM:VAT TR:VAT VA:VAT NL:ION SE:VAT ZZZ ',concat(' ',normalize-space(.),' ') ) ) )|SchemeID for party identifier must be from PEPPOL Policy for identifiers,
+                policy 8  |//cbc:EndpointID|(@schemeID)|An endpoint identifier MUST have a schemeID attribute |//cbc:EndpointID//@schemeID|( ( not(contains(normalize-space(.),' ')) and contains( ' FR:SIRENE SE:ORGNR FR:SIRET FI:OVT DUNS GLN DK:P IT:FTI NL:KVK IT:SIA IT:SECETI DK:CPR DK:CVR DK:SE DK:VANS IT:VAT IT:CF NO:ORGNR NO:VAT HU:VAT EU:REID AT:VAT AT:GOV IS:KT IBAN AT:KUR ES:VAT IT:IPA AD:VAT AL:VAT BA:VAT BE:VAT BG:VAT CH:VAT CY:VAT CZ:VAT DE:VAT EE:VAT GB:VAT GR:VAT HR:VAT IE:VAT LI:VAT LT:VAT LU:VAT LV:VAT MC:VAT ME:VAT MK:VAT MT:VAT NL:VAT PL:VAT PT:VAT RO:VAT RS:VAT SI:VAT SK:VAT SM:VAT TR:VAT VA:VAT NL:ION SE:VAT ZZZ ',concat(' ',normalize-space(.),' ') ) ) )|SchemeID for endpoint identifier must be from PEPPOL Policy for identifiers,
+                policy 8  |//cac:PartyIdentification|(cbc:ID)|If Party identification is used, identifier MUST be sent |//cac:PartyName|(cbc:Name)|If Party Name is used, name MUST be sent |//cac:Price|(cbc:PriceAmount)|If Price is used, item net price MUST be sent |//cac:AllowanceCharge|(cbc:ChargeIndicator) and (cbc:AllowanceChargeReason) and (cbc:Amount)|If AllowanceCharge is used, charge indicator, reason and amount MUST all be sent |//cac:SellersItemIdentification|(cbc:ID)|If Sellers Item Identification is used, item sellers identifier MUST be sent |//cac:ManufacturersItemIdentification|(cbc:ID)|If Manufacturers Item Identification is used, manufacturer item identifier MUST be sent |//cac:StandardItemIdentification|(cbc:ID)|If Standard Item Identification is used, item starndard identifier MUST be sent |//cac:OriginCountry|(cbc:IdentificationCode)|If Origin country is used, item origin country code MUST be sent |//cac:Certificate|(cbc:CertificateType) and (cbc:CertificateTypeCode)|If Certificate is used, item label type and item label name MUST be sent |//cac:Certificate|(cac:IssuerParty/cac:PartyName/cbc:Name)|If Certificate is used, item label issuer party name MUST be sent |//cac:CallForTendersLineReference|(cbc:LineID)|If Call for Tenders Line Reference is used, requested deliverable identifier MUST be sent |//cbc:MinimumOrderQuantity|(@unitCode)|Minimum order quantity MUST have a unitCode |//cbc:MaximumOrderQuantity|(@unitCode)|Maximum order quantity MUST have a unitCode |//cac:CatalogueLine|(cbc:OrderableIndicator)|A Catalogue line MUST have an orderable indicator"/> |//cac:CatalogueLine|((normalize-space(cbc:OrderableIndicator) = 'true') and (cbc:OrderableUnit)) or (string(cbc:OrderableIndicator) != 'true')|If orderable indicator is true, orderable unit must be present |//cac:CatalogueLine|not(cbc:MaximumOrderQuantity) or not(cbc:MinimumOrderQuantity) or number(cbc:MaximumOrderQuantity) >= number(cbc:MinimumOrderQuantity)|The Minimum order quantity MUST be smaller than or equal to the Maximum order quantity.
