--- a/guides/esens_bis54/codes_rules/business_rules.adoc
+++ b/guides/esens_bis54/codes_rules/business_rules.adoc
@@ -4,7 +4,19 @@ The below listed business rules are additional rules added by the {eSENS} pilot 
 
 IMPORTANT: Additional business rules are listed in the {CENBII} documents, and these cannot be violated if the instance document is to be valid!
 
+[cols="3", options="header"]
+|====
+|Rule
+|Test
+| Message
 include::../{gendoc}/Trdm090_rules.adoc[]
+|====
 
 <<<
+[cols="3", options="header"]
+|====
+|Rule
+|Test
+| Message
 include::../{gendoc}/Trdm045_rules.adoc[]
+|====
