--- a/guides/esens_bis54x/peppol_identifiers/customization_id.adoc
+++ b/guides/esens_bis54x/peppol_identifiers/customization_id.adoc
@@ -41,9 +41,7 @@ urn:www.cenbii.eu:transaction:biitrdm045:ver3.0:extended:urn:www.peppol.eu:bis:p
 Example of usage:
 [source, xml]
 ----
-<cbc:CustomizationID>
-urn:www.cenbii.eu:transaction:biitrdm068:ver3.0:extended:urn:www.peppol.eu:bis:peppol54x:ver1.0
-</cbc:CustomizationID>
+include::../{gendoc}/examples/Trdm090.xml[tags=custID]
 ----
 
 IMPORTANT: Please note that CustomizationID element in the document instance MUST correspond to the Customization ID of the SMP Document Identifier.
