Added links to implementation guides

--- a/guides/esens_bis54x/BIS54x.adoc
+++ b/guides/esens_bis54x/BIS54x.adoc
@@ -19,6 +19,7 @@ include::{sourcedir}\document_history\contributors.adoc[]
 include::{sourcedir}\introduction\README.adoc[]
 include::{gendoc}/audience.adoc[]
 include::{sourcedir}\principles_and_prerequisites\README.adoc[]
+include::{sourcedir}\principles_and_prerequisites\implementation_guide.adoc[]
 include::{sourcedir}\principles_and_prerequisites\scope.adoc[]
 include::{sourcedir}\principles_and_prerequisites\interoperability.adoc[]
 include::{sourcedir}\principles_and_prerequisites\non-functional_requirements.adoc[]
