Updated query for extracting business rules and corrected corresponding adoc files

--- a/guides/esens_bis54x/codes_rules/business_rules.adoc
+++ b/guides/esens_bis54x/codes_rules/business_rules.adoc
@@ -4,33 +4,39 @@ The below listed business rules are additional rules added by the {eSENS} pilot 
 
 IMPORTANT: Additional business rules are listed in the {CENBII} documents, and these cannot be violated if the instance document is to be valid!
 
-[cols="3", options="header"]
+[cols="5", options="header"]
 .Rules for Trdm090, Submit tender
 |====
+|RuleID
 |Rule
+|Flag
 |Test
-| Message
+|Message
 include::../{gendoc}/Trdm090_rules.adoc[]
 |====
 
 <<<
 
-[cols="3", options="header"]
+[cols="5", options="header"]
 .Rules for Trdm045, Tender receipt notification
 |====
+|RuleID
 |Rule
+|Flag
 |Test
-| Message
+|Message
 include::../{gendoc}/Trdm045_rules.adoc[]
 |====
 
 <<<
 
-[cols="3", options="header"]
+[cols="5", options="header"]
 .Rules for Trdm068, preAward catalogue
 |====
+|RuleID
 |Rule
+|Flag
 |Test
-| Message
+|Message
 include::../{gendoc}/Trdm068_rules.adoc[]
 |====
