--- a/guides/esens_bis54x/BIS54x.adoc
+++ b/guides/esens_bis54x/BIS54x.adoc
@@ -27,6 +27,8 @@ include::{sourcedir}\process\business_process.adoc[]
 include::{sourcedir}\codes_rules\README.adoc[]
 include::{sourcedir}\codes_rules\code_lists.adoc[]
 include::{sourcedir}\codes_rules\business_rules.adoc[]
+include::{sourcedir}\descriptions\README.adoc[]
+include::{sourcedir}\descriptions\Tender.adoc[]
 include::{gendoc}/Peppol_policy.adoc[]
 include::{gendoc}/party_identifiers.adoc[]
 include::{gendoc}/version_id.adoc[]
