--- a/guides/esens_bis54/peppol_identifiers/customization_id.adoc
+++ b/guides/esens_bis54/peppol_identifiers/customization_id.adoc
@@ -36,9 +36,7 @@ urn:www.cenbii.eu:transaction:biitrdm045:ver3.0:extended:urn:www.peppol.eu:bis:p
 .Example of usage:
 [source, xml]
 ----
-<cbc:CustomizationID>
-urn:www.cenbii.eu:transaction:biitrdm090:ver3.0:extended:urn:www.peppol.eu:bis:peppol54a:ver1.0
-</cbc:CustomizationID>
+include::../Source/examples/Trdm090.xml[tags=custID]
 ----
 
 IMPORTANT: Please note that CustomizationID element in the document instance MUST correspond to the Customization ID of the SMP Document Identifier.
