--- a/guides/General/Attributes.adoc
+++ b/guides/General/Attributes.adoc
@@ -3,6 +3,7 @@
 :eSENS: http://www.esens.eu/[eSENS]
 :CENBII: http://www.cenbii.eu/[CEN BII]
 :PEPPOL: http://www.peppol.eu[PEPPOL]
+:CENBII_VA: http://www.cenbii.eu/deliverables/cen-wsbii-3/validation-tools/
 
 :EU_Dir_24: http://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32014L0024&from=En
 
@@ -21,11 +22,11 @@
 :CAdES: https://en.wikipedia.org/wiki/CAdES_(computing)
 
 :Tender_xsd:  http://docs.oasis-open.org/ubl/os-UBL-2.1/xsd/maindoc/UBL-Tender-2.1.xsd
-
 :Tender_Rec_xsd: http://docs.oasis-open.org/ubl/os-UBL-2.1/xsd/maindoc/UBL-TenderReceipt-2.1.xsd
-
 :CfT_xsd: http://docs.oasis-open.org/ubl/os-UBL-2.1/xsd/maindoc/UBL-CallForTenders-2.1.xsd
 :Catalogue_xsd: http://docs.oasis-open.org/ubl/os-UBL-2.1/xsd/maindoc/UBL-Catalogue-2.1.xsd
+:Trdm090_sch: https://github.com/difi/vefa-preaward/tree/master/rules/esens-trdm090-1.0[ESENS-UBL-T90.sch]
+:Trdm045_sch: https://github.com/difi/vefa-preaward/tree/master/rules/esens-trdm045-1.0[ESENS-UBL-T45.sch]
 
 :BPMN: https://en.wikipedia.org/wiki/Business_Process_Model_and_Notation[BPMN]
 
