--- a/guides/esens_bis54/BIS54.adoc
+++ b/guides/esens_bis54/BIS54.adoc
@@ -1,15 +1,24 @@
-= eSENS Business interoperability specification 54 - Submit Tender
+= Business interoperability specification - 54 Submit Tender
+:author: Direktoratet for forvaltning og IKT, DIFI
+:revnumber: 0.9
+:revdate: 30-08-2016
 :icons: font
 :toc: left
 :toclevels: 4
+:sectnums:
+:sectlinks:
+:title-logo-image: e-sens_logo.png
 :source-highlighter: coderay
 :sourcedir: .
 :gendoc: ../General
 :imagesdir: ../assets/images
 
+////
+image:e-sens_logo.png[1500,750,align="center"]
+////
 
-Direktoratet for forvaltning og IKT, DIFI; Siw Midtgård Meckelborg
-v0.1: First draft for review
+
+
 
 :leveloffset: +1
 
@@ -20,10 +29,10 @@ include::{sourcedir}/document_history/contributors.adoc[]
 include::{sourcedir}/introduction/README.adoc[]
 include::{gendoc}/audience.adoc[]
 include::{sourcedir}/principles_and_prerequisites/README.adoc[]
-include::{sourcedir}/principles_and_prerequisites\implementation_guide.adoc[]
 include::{sourcedir}/principles_and_prerequisites/scope.adoc[]
 include::{sourcedir}/principles_and_prerequisites/interoperability.adoc[]
 include::{sourcedir}/principles_and_prerequisites/non-functional_requirements.adoc[]
+include::{sourcedir}/principles_and_prerequisites\implementation_guide.adoc[]
 include::{sourcedir}/process/business_process.adoc[]
 include::{sourcedir}/codes_rules/README.adoc[]
 include::{sourcedir}/codes_rules/code_lists.adoc[]
