--- a/guides/esens_bis54/introduction/README.adoc
+++ b/guides/esens_bis54/introduction/README.adoc
@@ -3,12 +3,24 @@
 
 This BIS is a result of work within {eSENS} eTendering workgroups and published as part of their specifications.
 
-This BIS provides a set of specifications for implementing a business process. The document is concerned with clarifying requirements for ensuring interoperability of pan-European Public eProcurement and provides guidelines for supporting these requirements and how to implement. The following CEN WS/BII3 profiles are the bases for this work:
+This BIS provides a set of specifications for implementing a business process. The document is concerned with clarifying requirements for ensuring interoperability of pan-European Public eProcurement and provides guidelines for supporting these requirements and how to implement.
+****
+[IMPORTANT]
+====
+The following CEN WS/BII3 profile, and the corresponding UBL binding documents, are the basis for this work:
 
-* Profile 54 Submit Tender
+* Profile 54 Submit Tender (CWA 17027-119)
+* UBL binding for Submit tender (CWA 17027-218)
+* UBL binding for Tender Reception Notification (CWA 17027-205)
+
+*And it is important that implementers are well known with the content of these documents to ensure implementations that are valid and of high quality.*
+====
+****
 
 *The purpose* of this document is to describe a common format for exchanging messages in a procurement procedure, to facilitate an efficient implementation and increased use of electronic tendering based on this format.
 
 
 
 image::purpose.png[Purpose, align="center"]
+
+<<<<
