--- a/guides/esens_bis54/peppol_identifiers/customization_id.adoc
+++ b/guides/esens_bis54/peppol_identifiers/customization_id.adoc
@@ -9,13 +9,13 @@ The {PEPPOL} Customization ID identifies the specification of content and rules 
 
 Example:
 
-[cols="2"]
+[cols="20m,80"]
 .CustomizationID
 |===
-|*Transaction ID:*
+|Transaction ID:
 |`urn:www.cenbii.eu:transaction:biitrdm090:ver3.0`
 
-|*Extension ID:*
+|Extension ID:
 |`urn:www.peppol.eu:bis:peppol54a:ver1.0`
 |===
 
@@ -36,7 +36,9 @@ urn:www.cenbii.eu:transaction:biitrdm045:ver3.0:extended:urn:www.peppol.eu:bis:p
 .Example of usage:
 [source, xml]
 ----
-include::../Source/examples/Trdm090.xml[tags=custID]
+include::../{gendoc}/examples/Trdm090.xml[tags=custID]
 ----
 
 IMPORTANT: Please note that CustomizationID element in the document instance MUST correspond to the Customization ID of the SMP Document Identifier.
+
+<<<<
