--- a/guides/esens_bis54/principles_and_prerequisites/README.adoc
+++ b/guides/esens_bis54/principles_and_prerequisites/README.adoc
@@ -3,4 +3,6 @@
 
 This chapter describes the principles and assumptions that underlie the use of the {eSENS} eTendering BIS. It is based on the {CENBII} profiles:
 
-* Profile 54 Submit Tender
+* Profile 54 Submit Tender (CWA 17027-119)
+
+NOTE: The profile document is available from your national standardization body.
