--- a/guides/esens/bisTendering/introduction/README.adoc
+++ b/guides/esens/bisTendering/introduction/README.adoc
@@ -5,11 +5,25 @@ This BIS is a result of work within {PEPPOL} eTendering workgroups and published
 
 This BIS provides a set of specifications for implementing a business process. The document is concerned with clarifying requirements for ensuring interoperability of pan-European Public eProcurement and provides guidelines for supporting these requirements and how to implement. The following are the basis for this work:
 
+****
+[IMPORTANT]
+====
+These CEN WS/BII3 <<profiles, profiles>>, and the corresponding UBL binding documents, as well as the {ESPD_doc} are the basis for this work:
+
 * CEN WS/BII3 Profile 54 Submit Tender
 * CEN WS/BII3 Profile 35 Advanced Tender with Pre-award Catalogue
-* European commission documentation for ESPD 
+*** CWA3456 Part 218 UBL SIG - Trdm090 Tender
+*** CWA3456 Part 205 UBL SIG - Trdm045 Tender Reception Notification
+*** CWA 4567 part 213 UBL Trdm068 Pre-award catalogue
+* European commission documentation for ESPD
+
+*And it is important that implementers are well known with the content of these documents to ensure implementations that are valid and of high quality.*
+====
+****
+
+
 
 *The purpose* of this document is to describe a common format for exchanging messages in a procurement procedure, to facilitate an efficient implementation and increased use of electronic tendering based on this format.
 
 
-image::purpose.png[Purpose, align="center"]
+image::purpose_peppol.png[Purpose, align="center"]
