Minor editorial changes

--- a/guides/esens/bisTendering/document_history/contributors.adoc
+++ b/guides/esens/bisTendering/document_history/contributors.adoc
@@ -7,7 +7,7 @@
 |===
 | Country
 | Name
-| Organization (= Beneficiary – Organization in national consortium – Subcontractor)
+| Organization
 
 | NO |Siw Midtgård Meckelborg | DIFI/Edisys
 | NO |Jan Mærøe | DIFI
