--- a/guides/esens/bisTendering/codes_rules/business_rules.adoc
+++ b/guides/esens/bisTendering/codes_rules/business_rules.adoc
@@ -2,7 +2,7 @@
 
 The below listed business rules are additional rules to ensure valid instance documents, and to ensure that identifiers needed in the {PEPPOl} Transport infrastructure are present.
 
-IMPORTANT: Additional business rules are listed in the {CENBII} and {ESPD_docs}, and these cannot be violated if the instance document is to be valid!
+IMPORTANT: Additional business rules are listed in the {CENBII} and {ESPD_doc}, and these cannot be violated if the instance document is to be valid!
 
 [cols="5", options="header"]
 .Rules for Trdm090, Submit tender
