--- a/guides/esens/bisTendering/main.adoc
+++ b/guides/esens/bisTendering/main.adoc
@@ -20,7 +20,7 @@ include::{gendoc}/Copyright/Statement_peppol.adoc[]
 include::{sourcedir}\document_history\revision_history.adoc[]
 include::{sourcedir}\document_history\contributors.adoc[]
 include::{sourcedir}\introduction\README.adoc[]
-include::{gendoc}/audience.adoc[]
+include::{sourcedir}\introduction\audience.adoc[]
 include::{sourcedir}\principles_and_prerequisites\README.adoc[]
 include::{sourcedir}\principles_and_prerequisites\implementation_guide.adoc[]
 include::{sourcedir}\principles_and_prerequisites\scope.adoc[]
