Updated espd reference and peppol logo

--- a/guides/esens/bisTendering/descriptions/Tender.adoc
+++ b/guides/esens/bisTendering/descriptions/Tender.adoc
@@ -21,7 +21,7 @@ include::../{gendoc}/examples/Trdm090.xml[tags=ProvidedCatalogue]
 <2>  DocumentDescription should be "PreAward Catalogue"
 <3>  Name of the structured catalogue file
 
-
+[[espd_descr]]
 ==== ESPD response
 
 ESPD response can be given as either structured or unstructured information, based on what is asked for in the call for tenders. ESPD response can be used in profile 54y and 54xy. See <<profiles, profile chapter>> for more details.
