--- a/guides/esens/bisTendering/introduction/README.adoc
+++ b/guides/esens/bisTendering/introduction/README.adoc
@@ -1,7 +1,7 @@
-= Introduction to PEPPOL eTendering and BIS
+= Introduction to PEPPOL Tendering and BIS
 
 
-This BIS is a result of work within {PEPPOL} eTendering workgroups and published as part of their specifications.
+This BIS is a result of work within {PEPPOL} Tendering workgroups and published as part of their specifications.
 
 This BIS provides a set of specifications for implementing a business process. The document is concerned with clarifying requirements for ensuring interoperability of pan-European Public eProcurement and provides guidelines for supporting these requirements and how to implement. The following are the basis for this work:
 
