PEPPOL logo added

--- a/guides/esens/bisTendering/main.adoc
+++ b/guides/esens/bisTendering/main.adoc
@@ -1,4 +1,4 @@
-= image:peppol.png[]openPEPPOL BIS54a - Tendering
+= openPEPPOL BIS54a - Tendering
 :author: Direktoratet for forvaltning og IKT, DIFI
 :revnumber: 0.9
 :revdate: 30-08-2016
@@ -11,6 +11,8 @@
 :sourcedir: .
 :gendoc: ../../General
 :imagesdir: ../../../assets/images
+
+image::peppol.png[align="center"]
 
 
 :leveloffset: +1
