--- a/guides/esens/bisTendering/main.adoc
+++ b/guides/esens/bisTendering/main.adoc
@@ -31,7 +31,7 @@ include::{sourcedir}\process\business_process.adoc[]
 include::{sourcedir}\codes_rules\README.adoc[]
 include::{sourcedir}\codes_rules\code_lists.adoc[]
 include::{sourcedir}\codes_rules\business_rules.adoc[]
-include::{sourcedir}\descriptions\espd.adoc[]
+include::{gendoc}\espd.adoc[]
 include::{sourcedir}\descriptions\README.adoc[]
 include::{sourcedir}\descriptions\Tender.adoc[]
 include::{gendoc}/Peppol_policy.adoc[]
