--- a/guides/esens/bisTendering/principles_and_prerequisites/non-functional_requirements.adoc
+++ b/guides/esens/bisTendering/principles_and_prerequisites/non-functional_requirements.adoc
@@ -1,4 +1,4 @@
 
 == Non-functional requirements
 
-For the {PEPPOL} Tendering BIS all {PEPPOL} non-functional requirements are applicable as mentioned in CWA3456 Part 119 Profile 54 - Tendering and 35 Advanced Tendering with PreAward Catalogue, as well as any requirements found in {ESPD_doc}. When adopting the {PEPPOL} Tendering BIS implementers must comply to these requirements.
+For the {PEPPOL} Tendering BIS all {PEPPOL} non-functional requirements are applicable as mentioned in CWA 17027-119 Profile 54 - Tendering and CWA 17027-105 Profile 35 Advanced Tendering with PreAward Catalogue, as well as any requirements found in {ESPD_model}. When adopting the {PEPPOL} Tendering BIS implementers must comply to these requirements.
