--- a/guides/esens/bis47x/introduction/README.adoc
+++ b/guides/esens/bis47x/introduction/README.adoc
@@ -3,16 +3,19 @@
 
 This BIS is a result of work within {eSENS} eTendering workgroups and published as part of their specifications.
 
-This BIS provides a set of specifications for implementing a business process. The document is concerned with clarifying requirements for ensuring interoperability of pan-European Public eProcurement and provides guidelines for supporting these requirements and how to implement. The following CEN WS/BII3 profiles are the bases for this work:
-
-* Profile 47 Call for Tenders
-* Profile 41 European Single Procurement Document
-
-
+This BIS provides a set of specifications for implementing a business process. The document is concerned with clarifying requirements for ensuring interoperability of pan-European Public eProcurement and provides guidelines for supporting these requirements and how to implement. The following are the basis for this work:
 
 ****
 [IMPORTANT]
-This document does not contain any transaction details/examples for the ESPD request transaction, this will be added at a later stage. 
+====
+These CEN WS/BII3 <<profiles, profiles>>, and the corresponding UBL binding documents, as well as the ESPD Documentation are the basis for this work:
+
+* CWA 17027-112 Profile 47 - Call for Tenders
+* CWA 17027-212 UBL binding document, Trdm083 Call for tenders
+* European commission documentation for ESPD
+
+*And it is important that implementers are well known with the content of these documents to ensure implementations that are valid and of high quality.*
+====
 ****
 
 *The purpose* of this document is to describe a common format for exchanging messages in a procurement procedure, to facilitate an efficient implementation and increased use of electronic call for tender and ESPD based on this format.
