--- a/guides/esens/bis47x/peppol_identifiers/customization_id.adoc
+++ b/guides/esens/bis47x/peppol_identifiers/customization_id.adoc
@@ -6,39 +6,26 @@ The {PEPPOL} Customization ID identifies the specification of content and rules 
 ----
 <transactionId>:(restrictive|extended|partly):<extensionId>[(restrictive|extended|partly):<extensionId>].
 ----
-
-Example:
-
-[cols="2"]
-.CustomizationID
-|===
-|*Transaction ID:*
-|`urn:www.cenbii.eu:transaction:biitrdm083:ver3.0`
-
-|*Extension ID:*
-|`urn:www.peppol.eu:bis:peppol47x:ver1.0`
-|===
+Which customization identification that should be used, is based on which transaction is sent, and the extension identification for this BIS document (47):
 
 
-CustomizationID to use:
 
-.For Call for tender:
+.For Call for tenders (trdm083):
 ----
-urn:www.cenbii.eu:transaction:biitrdm083:ver3.0:extended:urn:www.peppol.eu:bis:peppol47x:ver1.0
-----
-
-.#For ESPD request:#
-----
-urn:www.cenbii.eu:transaction:biitrdm070:ver3.0:extended:urn:www.peppol.eu:bis:peppol47x:ver1.0
+urn:www.cenbii.eu:transaction:biitrdm083:ver3.0:extended:urn:www.peppol.eu:bis:peppol47a:ver1.0
 ----
 
 
-.Example of usage:
+.For the ESPD response:
+----
+#Must be checked#
+----
+
+
+Example of usage:
 [source, xml]
 ----
-<cbc:CustomizationID>
-urn:www.cenbii.eu:transaction:biitrdm083:ver3.0:extended:urn:www.peppol.eu:bis:peppol47x:ver1.0
-</cbc:CustomizationID>
+include::../{gendoc}/examples/Trdm083.xml[tags=custID]
 ----
 
 IMPORTANT: Please note that CustomizationID element in the document instance MUST correspond to the Customization ID of the SMP Document Identifier.
